# jc3248-oracle

./: .gitignore  CMakeLists.txt  HARDWARE.md  Makefile  README.md
.github/workflows/: compile.yml
docs/: index.html
esphome/: hello.yaml
faces/hello/main/: display.c  display.h  hud_gfx.c  hud_gfx.h  idf_component.yml
faces/relay/: README.md
faces/relay/main/: CMakeLists.txt  idf_component.yml  main.c  relay_signal.c  relay_signal.h
main/: display.c  hud_gfx.c  hud_gfx.h
shared/: display.h  idf_component.yml
